# Hotel-RoomBooking-Management-System_OOP-Project_HCMUS

./: .gitignore  ALL_BUILD.vcxproj.filters  Booking.cpp  BookingRepository.cpp  CMakeCache.txt  CMakeLists.txt  DashboardService.h  DatabaseManager.cpp  DerivedRoom.cpp  Hotel Management.qtvscr  Hotel Management.vcxproj.filters  HotelManagement.h  Hotel_Management.vcxproj  Hotel_Management.vcxproj.filters  InvoiceRepository.cpp  InvoiceRepository.h  MembershipTier.h  Observer.cpp  Observer.h  README.md  Room.cpp  Room.h  RoomRepository.cpp  ServiceItem.cpp  ServiceItem.h  ServiceItemRepository.cpp  ServiceItemRepository.h  Typeroom.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.out  cmake_install.cmake  hotel.db  main.cpp  obsever.cpp
.qt/: QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Booking/: Booking.cpp  Booking.h  BookingFactory.h  BookingRepository.cpp  BookingRepository.h  BookingType.h  DepositStatus.h  main.cpp
Booking/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
CUSTOMER/: Customer 21.56.18.h  Customer.cpp  MembershipPolicy.h  MembershipTier.h  a.out  main.cpp
Customer/: Customer.cpp  CustomerRepository.h
Database/: hotel.db  hotel.sqbpro
Hotel Management/: .gitignore  BillingService.h  BookingRepository.cpp  BookingRepository.h  Customer.h  DashboardService.cpp  DatabaseManager.cpp  DatabaseManager.h  DerivedRoom.cpp  DerivedRooms.h  Hotel Management.slnx  Hotel Management.vcxproj  Hotel Management.vcxproj.filters  HotelManagement.qrc  HotelManagement.ui  MembershipPolicy.cpp  MembershipPolicy.h  Room.cpp  Room.h  RoomFactory.cpp  RoomRepository.h  ServiceItemRepository.cpp  Typeroom.h  main.cpp
Hotel_Management.dir/Debug/: Hotel_Management.exe.recipe  Hotel_Management.ilk
Hotel_Management.dir/Debug/Hotel_Management.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
Manager/: BillingService.cpp  BillingService.h  DashboardService.cpp  DatabaseManager.cpp  DatabaseManager.h  Invoice.h
ROOM/: DerivedRoom.cpp  DerivedRooms.h  Room.cpp  Room.h  RoomStatus.h  Typeroom.h  a.out  main.cpp  observer.h  obsever.cpp
Repository/: BookingRepository.cpp  BookingRepository.h  CustomerRepository.cpp  CustomerRepository.h  InventoryRepository.cpp  InvoiceRepository.cpp  InvoiceRepository.h  RoomRepository.cpp  RoomRepository.h  ServiceItemRepository.cpp  ServiceItemRepository.h
Room/: DepositStatus.h  DerivedRooms.cpp  DerivedRooms.h  Room.cpp  Room.h  RoomRepository.cpp  RoomStatus.h
SERVICE_ITEM/: ServiceEnums.h  ServiceItem.cpp  ServiceItem.h  ServiceStatus.h
Service/: InventoryService.cpp  InventoryService.h  ServiceItemRepository.cpp  ServiceItemRepository.h
ServiceItem/: ServiceItem.cpp  ServiceItem.h  ServiceItemFactory.cpp  ServiceItemFactory.h
duckz/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  DashboardService.cpp  DatabaseManager.cpp  Hotel Management.vcxproj  HotelManagement  Hotel_Management.sln  Hotel_Management.vcxproj  Hotel_Management.vcxproj.filters  Makefile  Observer.cpp  Room.cpp  cmake_install.cmake  compile_commands.json  main.cpp
duckz/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-Release.cmake  QtDeploySupport.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets.cmake
duckz/Booking/: Booking.cpp  Booking.h  BookingFactory.cpp  BookingRepository.cpp
duckz/Customer/: MembershipPolicy.cpp
duckz/Database/: hotel.db
duckz/HotelManagement_autogen/: moc_predefs.h
duckz/Manager/: DatabaseManager.h
duckz/Room/: DepositStatus.h  Room.cpp  Room.h  RoomRepository.h
duckz/Service/: ServiceItem.cpp
frontend/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Customerwin.cpp  Hotel_Management  Makefile  Observer.cpp  Observer.h  back.avif  backend.cpp  backend.h  cmake_install.cmake  compile_commands.json  customerwin.h  frontend 2.cpp  frontend.cpp  frontend.h  main.cpp
frontend/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
frontend/Booking/: Booking.cpp  Booking.h  BookingFactory.cpp  BookingStatus.h
frontend/Checkout/: CheckoutPage.cpp  CheckoutPage.h  Checkoutpage.cpp
frontend/Customer/: Customer.cpp  Customer.h
frontend/CustomerWindow/: Customerwin.cpp  customerwin.h
frontend/Database/: hotel.db
frontend/Hotel_Management_autogen/EWIEGA46WW/: moc_Customerwin.cpp  moc_Customerwin.cpp.d
frontend/Login/: Login.cpp  Login.h
frontend/Mainwindow/Control/: Control.cpp  Control.h
frontend/Mainwindow/UI/: UI.cpp  UI.h
frontend/Manager/: BillingService.cpp  DashboardService.cpp  DashboardService.h  DatabaseManager.cpp
frontend/Repository/: BookingRepository.cpp  BookingRepository.h  CustomerRepository.cpp  CustomerRepository.h  InventoryRepository.h  RoomRepository.cpp  RoomRepository.h
frontend/Room/: Room.cpp  Room.h  RoomFactory.cpp  RoomFactory.h
frontend/backend/: backend.cpp
frontend/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
frontend/build-windows/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
frontend/build-windows/Hotel_Management_autogen/: deps  mocs_compilation.cpp
frontend/build-windows/Hotel_Management_autogen/EWIEGA46WW/: moc_Customerwin.cpp  moc_Customerwin.cpp.d
frontend/build-windows/Hotel_Management_autogen/YJ3R5EBCHP/: moc_CheckoutPage.cpp  moc_CheckoutPage.cpp.d
x64/Debug/: Hotel Management.exe.recipe  Hotel Management.ilk  vc143.idb
(+122 files in other folders)
